PROJECT(AMX_CorePlug)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_C_FLAGS "-W -g -DLINUX -pthread")

FILE(GLOB_RECURSE EVT_LIST 		"event/*.c")
FILE(GLOB_RECURSE LOG_LIST 		"log/*.c")
FILE(GLOB_RECURSE NET_LIST 		"netip/*.c")
FILE(GLOB_RECURSE JSON_LIST 	"json/*.c")
FILE(GLOB_RECURSE TIMER_LIST 	"timer/*.c")

FILE(GLOB_RECURSE CORE_LIST 	"core/*.c")

FILE(GLOB_RECURSE HEADER_LIST "*.h")
SET (INCLUDE_DIRS "")

FOREACH(_HEADERFILE ${HEADER_LIST})
    GET_FILENAME_COMPONENT(_DIR ${_HEADERFILE} PATH)
    LIST(APPEND INCLUDE_DIRS ${_DIR})
ENDFOREACH()

LIST(REMOVE_DUPLICATES INCLUDE_DIRS)

INCLUDE_DIRECTORIES(${INCLUDE_DIRS})

ADD_LIBRARY(core_plug SHARED ${EVT_LIST} ${LOG_LIST} ${NET_LIST} ${JSON_LIST} ${CORE_LIST} ${TIMER_LIST})

#ADD_EXECUTABLE(event "main/event_test.c")
#TARGET_LINK_LIBRARIES(event core_plug)

#ADD_EXECUTABLE(log "main/log_test.c")
#TARGET_LINK_LIBRARIES(log core_plug)

#ADD_EXECUTABLE(json "main/json_test.c")
#TARGET_LINK_LIBRARIES(json core_plug)

#ADD_EXECUTABLE(netip "main/netip_test.c")
#TARGET_LINK_LIBRARIES(netip core_plug)

#ADD_EXECUTABLE(core "main/core_test.c")
#TARGET_LINK_LIBRARIES(core core_plug)

ADD_EXECUTABLE(timer "main/timer_test.c")
TARGET_LINK_LIBRARIES(timer core_plug)
